# mcshub

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  Dockerfile  Dockerfile.alpine  LICENSE  Makefile  Makefile.in  README.md  config  configure  mcshub.sln  mcshub.yml  meson.build  meson_options.txt
.devcontainer/: .bashrc
.devcontainer/meson/cross/: arm-linux-gnueabihf  x86_64  x86_64-alpine-linux-musl  x86_64-w64-mingw32
etc/: mcshub.service
res/: meson.build
res/config/: mcshub.yml
res/config/fallback/: login.yml  status.json  status.yml
res/config/mcsman/: status.json  status.yml
res/sample/: mcshub.yml
res/sample/default/: login.json  status.json
res/sample/mcsman/: login.json
script/: after.ps1  before.ps1  get_config  hardcoded  hardcoded.ps1  resolve_deps  resources
src/: Makefile  busy_state.h  cli.cpp  cli.hpp  client.cpp  client.h  client.hpp  config.yml  connection.h  control.cpp  control.hpp  delegate.h  descriptor.cpp  descriptor.h  directory_cache.cpp  directory_cache.h  dns_server.cpp  dns_server.h  dyn_array.h  event_d.cpp  event_d.h  event_handler.h  event_pull.cpp  event_pull.h  events.hpp  file_d.cpp  file_d.h  gate.cpp  gate.hpp  hardcoded.cpp  hardcoded.h  hosts_db.cpp  hosts_db.h  hosts_db.hpp  in_stream.h  in_stream_d.cpp  in_stream_d.h  inotify_d.cpp  inotify_d.h  log.cpp  (+73 more)
test/: Makefile  args.cpp  cli.cpp  config.cpp  config.yml  distributed_test.cpp  dns_packet.cpp  dns_packet.txt  fetch_status.cpp  inotify.cpp  meson.build  paket.cpp  property.cpp  serve100clients.sh  socket.cpp  status.cpp  test.h  test.hpp  test_server.hpp  test_strparts.cpp  util.cpp  varint.cpp  vars.cpp  yaml.cpp
